add staff component tooltips